Minor changes to formatting of driver.html and editProfile.html

--- a/templates/driver.html
+++ b/templates/driver.html
@@ -1,5 +1,9 @@
 [[extend 'layout.html']]
-<p class="is-size-2">Riders looking for Drivers</p>
+
+
+
+
+<p class="is-size-2">Available Drivers</p>
 
 <div class="section">
     <body>
