--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -12,9 +12,6 @@
     margin-top: 40px;
     padding: 20px; 
 }
-
-
-
 </style>
 
 
@@ -37,7 +34,7 @@
             <div class="control"><input class="input" type="text" placeholder="[[=account.last_name]]"></div>   
             
             <label class="label"> Location </label>      
-            <div class="control"><input class="input" type="text" placeholder="e.g Oakes College"></div>
+            <div class="control"><input class="input" type="text" placeholder="Location"></div>
             
             <label class="label">Category </label>    
             <div class="control">
