added button place holders for list and map view for driver and rider pages

--- a/templates/rider.html
+++ b/templates/rider.html
@@ -1,6 +1,10 @@
 [[extend 'layout.html']]
 
-<p class="is-size-2">Available Riders</p>
+<div>
+  <p class="is-size-2 ml-5" style="display: inline-block">Available Drivers</p>
+  <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 30px; padding-right: 20px; padding-left: 20px; margin-left: 910px; margin-top: 10px;">LIST</a>
+  <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 20px; padding-right: 20px; padding-left: 20px; margin-top: 10px;">MAP</a>
+</div>
 
 <div class="section">
     <body>
