--- a/templates/rider.html
+++ b/templates/rider.html
@@ -1,13 +1,18 @@
 [[extend 'layout.html']]
 
-<div>
-  <p class="is-size-2 ml-5" style="display: inline-block">Available Drivers</p>
-  <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 30px; padding-right: 20px; padding-left: 20px; margin-left: 910px; margin-top: 10px;">LIST</a>
-  <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 20px; padding-right: 20px; padding-left: 20px; margin-top: 10px;">MAP</a>
-</div>
+<style>
+  [v-cloak] {
+       display: none;
+  }
+</style>
 
-<div class="section">
-    <body>
+<div class="section" id="vue-target" v-cloak>
+  <div>
+    <p class="is-size-2" style="display: inline-block">Available Drivers</p>
+    <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 30px; padding-right: 20px; padding-left: 20px; margin-left: 890px; margin-top: 10px;">LIST</a>
+    <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 20px; padding-right: 20px; padding-left: 20px; margin-top: 10px;">MAP</a>
+  </div>
+  <body>
         <div class="field has-addons">
           <div class="control">
             <div class="select">
@@ -63,3 +68,11 @@
       
                   
 </div>
+
+[[block page_scripts]]
+<!-- Loads the index-specific js for Vue -->
+<script>
+  let my_callback_url = "[[=XML(my_callback_url)]]";
+</script>
+<script src="js/index.js"></script>
+[[end]]
