implemented google map api for rider  page using vue and goole map js api

--- a/templates/rider.html
+++ b/templates/rider.html
@@ -4,15 +4,20 @@
   [v-cloak] {
        display: none;
   }
+
+  /* set size of map */
+  #map {
+    height: 1000px;
+    width: 100%;
+  }
 </style>
 
 <div class="section" id="vue-target" v-cloak>
-  <div>
+  <div v-if="view == 'list'">
     <p class="is-size-2" style="display: inline-block">Available Drivers</p>
-    <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 30px; padding-right: 20px; padding-left: 20px; margin-left: 890px; margin-top: 10px;">LIST</a>
-    <a class="button is-primary" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; line-height: 20px; padding-right: 20px; padding-left: 20px; margin-top: 10px;">MAP</a>
-  </div>
-  <body>
+    <a class="button is-outlined" @click="viewChange('list')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px; margin-left: 900px;">LIST</a>
+    <a class="button is-primary" @click="viewChange('map')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px;">MAP</a>
+    <body>
         <div class="field has-addons">
           <div class="control">
             <div class="select">
@@ -65,7 +70,17 @@
         </div>
         [[pass]]
       </body>
-      
+    </div>
+    <!-- list view end -->
+
+    <!-- map view -->
+    <div v-else>
+      <p class="is-size-2" style="display: inline-block">Available Drivers</p>
+      <a class="button is-primary" @click="viewChange('list')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px; margin-left: 900px;">LIST</a>
+      <a class="button is-outlined" @click="viewChange('map')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px;">MAP</a>
+      <!-- display google map -->
+      <div id="map"></div>
+    </div>
                   
 </div>
 
@@ -75,4 +90,5 @@
   let my_callback_url = "[[=XML(my_callback_url)]]";
 </script>
 <script src="js/index.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChLO4FrJZ2B87Bbuo84k8e-ePktQX-d5s&callback=initMap&libraries=&v=weekly" async></script>
 [[end]]
