--- a/templates/driver.html
+++ b/templates/driver.html
@@ -15,10 +15,10 @@
 
 <div class="section" id="vue-target" v-cloak>
     <!-- list view -->
-    <div v-if="view == 'list'">
+    <div v-if="view == 0">
       <p class="is-size-2" style="display: inline-block">Available Drivers</p>
-      <a class="button is-outlined" @click="viewChange('list')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px; margin-left: 900px;">LIST</a>
-      <a class="button is-primary" @click="viewChange('map')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px;">MAP</a>
+      <a class="button is-outlined" @click="viewChange(0)" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px; margin-left: 900px;">LIST</a>
+      <a class="button is-primary" @click="viewChange(1)" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px;">MAP</a>
         <body>
           <div class="field has-addons">
             <div class="control">
@@ -87,8 +87,8 @@
     <!-- map view -->
     <div v-else>
       <p class="is-size-2" style="display: inline-block">Available Drivers</p>
-      <a class="button is-primary" @click="viewChange('list')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px; margin-left: 900px;">LIST</a>
-      <a class="button is-outlined" @click="viewChange('map')" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px;">MAP</a>
+      <a class="button is-primary" @click="viewChange(0)" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px; margin-left: 900px;">LIST</a>
+      <a class="button is-outlined" @click="viewChange(1)" style="font-size: 25px; background-color: rgb(242, 152, 19); height: 50px; padding-right: 20px; padding-left: 20px;">MAP</a>
       <!-- display google map -->
       <div id="map"></div>
     </div>
