changed wording from schedule to availabilty

--- a/templates/addSchedule.html
+++ b/templates/addSchedule.html
@@ -1,6 +1,6 @@
 [[extend 'layout.html']]
 
 <div class = "section">
-  <h1 class = "title">Add a Schedule</h1>
+  <h1 class = "title">Add Availability</h1>
   [[=form]]
 </div>
