--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -77,7 +77,7 @@
     </div>
     <section class="section">
       <div class="container">
-        <div class="title">Schedule</div>
+        <div class="title">Availability</div>
         <table class="table is-striped is-fullwidth">
           <tr>
              <th>Monday</th>
@@ -109,7 +109,7 @@
        </table>     
        <a class="button is-warning" href="[[=URL('addSchedule')]]">
         <span class = "icon"><i class = "fa fa-plus"></i></span>
-        <span>Add Schedule</span>
+        <span>Add Availability</span>
       </a> 
       </div>
     
