--- a/templates/editSchedule.html
+++ b/templates/editSchedule.html
@@ -1,6 +1,6 @@
 [[extend 'layout.html']]
 
 <div class = "section">
-    <h1 class = "title">Edit Schedule</h1>
+    <h1 class = "title">Edit Availability</h1>
     [[=form]]
   </div>
