--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -2,7 +2,7 @@
 
 <section class="section">
     <div class="container">
-      <div class="title">Schedule</div>
+      <div class="title">Availability</div>
       <table class="table is-striped is-fullwidth">
         <tr>
            <th>Monday</th>
