--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,7 +30,7 @@
             
             <tr> <td> Category</td> </tr>
              
-             <tr><td>Schedule:</td></tr>
+             <tr><td>Availability:</td></tr>
              <!--if the user is a driver than it should display certain info such as the car make, number of seats, and car model -->
             
                
@@ -46,7 +46,7 @@
              <tr><td>  Rider</td></tr>
              <tr><td>  
                 <a class="button is-warning" href="[[=URL('schedule', r['id'] )]]">
-                    <span>View Schedule</span>
+                    <span>View Availability</span>
                 </a> 
              </td></tr>
         
