--- a/templates/driver.html
+++ b/templates/driver.html
@@ -57,7 +57,7 @@
                     <strong>Full Name</strong>: [[=i["firstName"] + " " + i["lastName"]]]
                   </p>
                   <p>
-                    <strong>Location</strong>: [[=i["location"]]]
+                    <strong>Location</strong>: [[ =i["location"]]]
                   </p>
                   <p>
                     <strong>Car Model</strong>: [[=i["carModel"]]]
@@ -98,7 +98,7 @@
 [[block page_scripts]]
 <!-- Loads the index-specific js for Vue -->
 <script>
-  let my_callback_url = "[[=XML(my_callback_url)]]";
+  let driverURL = "[[=XML(driverURL)]]";
 </script>
 <script src="js/index.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChLO4FrJZ2B87Bbuo84k8e-ePktQX-d5s&callback=initMap&libraries=&v=weekly" async></script>
