--- a/templates/rider.html
+++ b/templates/rider.html
@@ -87,7 +87,7 @@
 [[block page_scripts]]
 <!-- Loads the index-specific js for Vue -->
 <script>
-  let my_callback_url = "[[=XML(my_callback_url)]]";
+  let riderURL = "[[=XML(riderURL)]]";
 </script>
 <script src="js/index.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChLO4FrJZ2B87Bbuo84k8e-ePktQX-d5s&callback=initMap&libraries=&v=weekly" async></script>
