--- a/templates/rider.html
+++ b/templates/rider.html
@@ -63,7 +63,7 @@
               </div>
               <div class="control">
                 <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
-                <a class="button is-primary" href="[[=URL('message')]]">Message</a>
+                <a class="button is-primary" href="[[=URL('message', signer=url_signer)]]">Message</a>
               </div>
             </div>
           </article>
