--- a/templates/message.html
+++ b/templates/message.html
@@ -71,6 +71,10 @@
   margin-top: 10px;
 }
 
+[v-cloak] {
+     display: none;
+}
+
 </style>
 
 
@@ -99,9 +103,11 @@
 
     </div>
   [[pass]]
-
+  
+  <!-- divider line -->
   <div class="divider"></div>
 
+  <!-- dm section -->
   <div id="comments" class="block">
     <!-- Here will go the comments. -->
     <div v-for="c in comment_list" class="block">
