--- a/templates/driver.html
+++ b/templates/driver.html
@@ -74,8 +74,7 @@
                 </div>
                 <div class="control">
                   <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
-                  <a class="button is-primary" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>
-                </div>
+                  <a class="button is-primary" @click="getUser([[=int(i['id'])]]), load_messages()" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>                </div>
               </div>
             </article>
           </div>
