--- a/templates/message.html
+++ b/templates/message.html
@@ -71,49 +71,61 @@
   margin-top: 10px;
 }
 
-[v-cloak] {
-     display: none;
-}
-
 </style>
 
+<!-- <style>
+  [v-cloak] {
+    display: none;
+  }
+</style> -->
 
-<div class="section" id="vue-target">
+
+<div>
   <!-- display the name of the person you are dming, also a back button and more info button -->
   [[for p in profile:]]
-    <div>
-      <!-- back button -->
-      <button class="button is-size-6" onclick="window.history.back()">
-        <span class="icon">
-            <i class="fas fa-arrow-left"></i>
-        </span>
-      </button>
+  <div>
+    <!-- back button -->
+    <button class="button is-size-6" onclick="window.history.back()">
+      <span class="icon">
+          <i class="fas fa-arrow-left"></i>
+      </span>
+    </button>
 
-      <!-- info button -->
-      <a class="info-button is-pulled-right is-size-4 mt-2" href="[[=URL('displayProfile', p['id'])]]">i</a>
+    <!-- info button -->
+    <a class="info-button is-pulled-right is-size-4 mt-2" href="[[=URL('displayProfile', p['id'])]]">i</a>
       
-      <!-- profile pic -->
-        <div class="center">
-          <!-- [[=p["profilePic"]]] -->
-          <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar">
-        </div>
+    <!-- profile pic -->
+      <div class="center">
+        <!-- [[=p["profilePic"]]] -->
+        <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar">
+      </div>
 
-      <!-- name -->
-      <h1 class="title is-3 has-text-centered">[[=p["firstName"] + " " + p["lastName"]]]</h1>
+    <!-- name -->
+    <h1 class="title is-3 has-text-centered">[[=p["firstName"] + " " + p["lastName"]]]</h1>
 
-    </div>
+  </div>
   [[pass]]
   
   <!-- divider line -->
   <div class="divider"></div>
+</div>
 
+<div class="section" id="vue-target">
   <!-- dm section -->
   <div id="comments" class="block">
     <!-- Here will go the comments. -->
     <div v-for="c in comment_list" class="block">
-      <div class="message-body" :class="{'is-pulled-right': c.alignRight}">
+
+      <p class="control" v-if="c.otherUserID == otherUserID">
         <span class="username">{{c.text}}</span>
-      </div>
+      </p>
+
+      <p class="control" v-else>
+        <div class="message-body" :class="{'is-pulled-right': c.alignRight}">
+          <span class="username">{{c.text}}</span>
+        </div>
+      </p>
+
     </div>
   </div>
 
@@ -123,7 +135,7 @@
         <input class="input" type="text" v-model="new_comment" style="width: 90vw;" @keyup.enter="add_comment"/>
       </p>
     </div>
-    <button class="button is-primary" @click="add_comment" >Send Message</button>
+    <button class="button is-primary" @click="add_comment">Send Message</button>
   </div>
 </div>
 
@@ -132,7 +144,8 @@
   // add this
   let load_messages_url = "[[=XML(load_messages_url)]]";
   let add_messages_url = "[[=XML(add_messages_url)]]";
+  let setUserURL ="[[=XML(getUserURL)]]";
   // add this
 </script>
-<script src="js/index.js"></script>
+<script src="js/message.js"></script>
 [[end]]
