--- a/templates/driver.html
+++ b/templates/driver.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="control">
                   <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
-                  <a class="button is-primary" @click="getUser([[=int(i['id'])]]), load_messages()" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>                </div>
+                  <a class="button is-primary" @focus="getUser([[=i['id']]])" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>                </div>
               </div>
             </article>
           </div>
@@ -98,6 +98,7 @@
 <!-- Loads the index-specific js for Vue -->
 <script>
   let driverURL = "[[=XML(driverURL)]]";
+  let getUserURL ="[[=XML(getUserURL)]]";
 </script>
 <script src="js/index.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChLO4FrJZ2B87Bbuo84k8e-ePktQX-d5s&callback=initMap&libraries=&v=weekly" async></script>
