Added license plates to test users and editProfile

--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -63,6 +63,12 @@
             <div class="control"><input class="input" type="text" placeholder="e.g Sorento"> </div>
            </div>
 
+          <div class="field">
+            <label class="label"> License Plate </label>      
+           <div class="control"><input class="input" type="text" placeholder="5XXX555"></div>
+
+          </div>
+
            <div class="field">
                 <label class="label">Number of Seats</label>
             <div class="control">
