--- a/templates/displayProfile.html
+++ b/templates/displayProfile.html
@@ -66,7 +66,7 @@
                 <tr><td>[[=p["firstName"] + " " + p["lastName"]]]</td></tr>       
                 <tr><td>[[=p["carMake"]]]</td></tr>
                 <tr><td>[[=p["carModel"]]]</td></tr> 
-                <tr><td>5XXX555</td></tr> 
+                <tr><td>[[=p["license"]]]</td></tr> 
                 <tr><td>[[=p["numSeats"]]]</td></tr>
                 <tr><td>[[=p["schedule"]]]</td></tr>
                 <tr>
